refacto Quantity component and translation's cart and home added

--- a/components/elements/buttons/PlusMinusButtons/PlusMinusButtons.module.css
+++ b/components/elements/buttons/PlusMinusButtons/PlusMinusButtons.module.css
@@ -1,20 +1,3 @@
-.quantityContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.quantity {
-  width: 100%;
-  max-width: 8rem;
-  min-width: 2rem;
-  text-align: center;
-  margin: 0 0.5rem;
-  background-color: var(--neutral-200);
-  border-radius: 0.25rem;
-  color: var(--neutral-900);
-  user-select: none;
-}
 .minus,
 .plus {
   display: flex;
@@ -22,6 +5,7 @@
   justify-content: center;
   flex-shrink: 0;
   font-size: 1.5rem;
+  padding: 0.25rem;
   width: 2rem;
   background-color: var(--neutral-200);
   border-radius: 0.25rem;
@@ -38,10 +22,6 @@
 /****** MEDIA QUERIES *****/
 /**************************/
 @media screen and (min-width: 1024px) {
-  .quantity {
-    font-size: 1.25rem;
-  }
-
   .minus,
   .plus {
     font-size: 1.85rem;
