--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -33,6 +33,41 @@
   text-align: center;
 }
 
+.quantityContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.quantity {
+  width: 100%;
+  max-width: 8rem;
+  min-width: 2rem;
+  text-align: center;
+  margin: 0 0.5rem;
+  padding: 0.25rem;
+  background-color: var(--neutral-200);
+  border-radius: 0.25rem;
+  color: var(--neutral-900);
+  user-select: none;
+}
+
+.addToCartButton {
+  width: 100%;
+  justify-content: center;
+  padding: 0.25rem 1rem;
+  border-radius: 0.25rem;
+}
+
+/**************************/
+/****** MEDIA QUERIES *****/
+/**************************/
+@media screen and (min-width: 1024px) {
+  .quantity {
+    font-size: 1.25rem;
+  }
+}
+
 /**************************/
 /* PREFERS REDUCED MOTION */
 /**************************/
