--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -18,7 +18,19 @@
 .cardImage {
   width: 100%;
   object-fit: cover;
-  height: 60%;
+  height: 50%;
+  user-select: none;
+}
+
+.badge {
+  width: 100%;
+  position: absolute;
+  top: 6%;
+  right: -37%;
+  transform: rotate(45deg);
+  background-color: var(--primary);
+  color: var(--neutral-50);
+  text-align: center;
   user-select: none;
 }
 
@@ -29,8 +41,20 @@
   padding: 1rem;
 }
 .cardTitle {
-  flex-grow: 1;
   text-align: center;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.cardPrice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  font-weight: 600;
+  font-size: 1.25rem;
 }
 
 .quantityContainer {
@@ -62,6 +86,12 @@
 /**************************/
 /****** MEDIA QUERIES *****/
 /**************************/
+@media screen and (min-width: 576px) {
+  .badge {
+    top: 6%;
+    right: -42%;
+  }
+}
 @media screen and (min-width: 1024px) {
   .quantity {
     font-size: 1.25rem;
