--- a/pages/product/Product.module.css
+++ b/pages/product/Product.module.css
@@ -1,24 +1,29 @@
 .productContainer {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .productImage {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 25rem;
+  padding: 1rem 0;
+  box-sizing: border-box;
+  height: 20rem;
   width: 100%;
   object-fit: cover;
 }
-
+.productInfo {
+  display: flex;
+  flex-direction: column;
+}
 .productInfo section {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 .productPrice {
   font-size: 2rem;
-  margin: 1.5rem 0 2rem 0;
+  margin: 1rem 0 1.5rem 0;
   color: var(--neutral-900);
 }
 
@@ -34,8 +39,10 @@
 }
 
 .productQuantity {
-  margin-bottom: 2rem;
-  max-width: 12rem;
+  margin: 1rem 0 2rem 00;
+  max-width: 20rem;
+  width: 100%;
+  align-self: center;
 }
 
 /**************************/
@@ -44,20 +51,23 @@
 @media screen and (min-width: 768px) {
   .productContainer {
     flex-direction: row;
-    align-items: center;
     flex-grow: 1;
-    gap: 3rem;
+    gap: 2rem;
   }
 
   .productImage {
-    padding: 1rem 0;
     height: 30rem;
     width: 60%;
-    align-self: flex-start;
   }
 
   .productInfo {
+    justify-content: center;
     padding: 1rem 0;
     width: 40%;
+  }
+
+  .productQuantity {
+    margin-bottom: 0;
+    align-self: flex-start;
   }
 }
