--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   position: relative;
   width: 100%;
-  height: 20rem;
+  height: 18rem;
   overflow: hidden;
   color: var(--neutral-900);
   border: 1px solid var(--neutral-300);
@@ -44,45 +44,28 @@
   flex-grow: 1;
   padding: 1rem;
 }
-.cardTitle {
-  text-align: center;
+.titleContainer {
+  display: flex;
+  gap: 0.5rem;
+}
+.title {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  margin-bottom: 1rem;
 }
-
-.cardPrice {
-  justify-content: center;
-  font-size: 1.25rem;
-}
-
-.quantityContainer {
+.priceContainer {
   display: flex;
-  align-items: flex-end;
-  justify-content: center;
   flex-grow: 1;
-  color: var(--neutral-900);
 }
-
-.quantity {
-  width: 100%;
-  max-width: 12rem;
-  min-width: 2rem;
-  text-align: center;
-  margin: 0 0.5rem;
-  padding: 0.25rem;
-  background-color: var(--neutral-200);
-  border-radius: 0.25rem;
-  user-select: none;
-}
-
-.addToCartButton {
-  width: 100%;
-  justify-content: center;
-  padding: 0.25rem 1rem;
-  border-radius: 0.25rem;
+.price {
+  margin-left: auto;
+  align-self: center;
+  font-size: 1.25rem;
+  box-sizing: border-box;
+  padding-left: 0.5rem;
+  border-left: 1px solid var(--neutral-300);
+  max-width: max-content;
 }
 
 /**************************/
@@ -95,8 +78,8 @@
   }
 }
 @media screen and (min-width: 1024px) {
-  .quantity {
-    font-size: 1.25rem;
+  .price {
+    font-size: 1.5rem;
   }
 }
 
