--- a/components/elements/Loader/Loader.module.css
+++ b/components/elements/Loader/Loader.module.css
@@ -6,7 +6,8 @@
   stroke-dasharray: 187;
   stroke-dashoffset: 0;
   transform-origin: center;
-  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+  animation: dash 1.4s var(--transition-easeInOut) infinite,
+    colors 5.6s var(--transition-easeInOut) infinite;
 }
 
 /**************************/
