--- a/components/modules/OpenLayersMap/OpenLayersMap.module.css
+++ b/components/modules/OpenLayersMap/OpenLayersMap.module.css
@@ -23,12 +23,12 @@
 .show {
   opacity: 1;
   pointer-events: auto;
-  transition: opacity 150ms var(--transition);
+  transition: opacity 150ms var(--transition-easeInOut);
 }
 .hidden {
   opacity: 0;
   pointer-events: none;
-  transition: opacity 150ms var(--transition);
+  transition: opacity 150ms var(--transition-easeInOut);
 }
 .address {
   display: flex;
