--- a/components/modules/ProductList/ProductList.module.css
+++ b/components/modules/ProductList/ProductList.module.css
@@ -15,3 +15,10 @@
     gap: 2rem;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .productList {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 2rem;
+  }
+}
