--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
   --error: #ad2216;
   --rating: #ffaa00;
 
-  --transition: cubic-bezier(0.55, 0.06, 0.68, 0.19);
+  --transition-easeInOut: cubic-bezier(0.65, 0, 0.35, 1);
 }
 
 html[data-theme='dark'] {
@@ -49,7 +49,7 @@ html[data-theme='dark'] {
   outline: none;
 }
 html {
-  font: 87.5% sans-serif;
+  font-size: 87.5%;
 }
 
 body,
@@ -69,7 +69,7 @@ a {
 }
 svg {
   transition: stroke 150ms ease-out, fill 150ms ease-out, color 150ms ease-out,
-    background-color 150ms ease-out, transform 300ms var(--transition);
+    background-color 150ms ease-out, transform 300ms var(--transition-easeInOut);
   max-width: 1.7rem;
   max-height: 1.7rem;
   flex-shrink: 0;
@@ -81,7 +81,7 @@ svg {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--neutral-50);
+  background-color: var(--neutral-100);
   position: relative;
 }
 .notFound {
