--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,8 @@ html {
 
 body,
 select,
-input {
+input,
+address {
   font-family: 'Baloo 2', cursive, ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
