--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
   --transition-easeInOut: cubic-bezier(0.65, 0, 0.35, 1);
 }
 
-html[data-theme='dark'] {
+html[color-scheme='dark'] {
   --primary: #dc9458;
   --primary-hover: #e3a979;
 
