--- a/components/elements/Quantity/Quantity.module.css
+++ b/components/elements/Quantity/Quantity.module.css
@@ -23,6 +23,10 @@
   padding: 0.25rem 1rem;
   border-radius: 0.25rem;
 }
+.addToCartButton span {
+  margin-right: 0.5rem;
+  font-size: 1.5rem;
+}
 
 /**************************/
 /****** MEDIA QUERIES *****/
