--- a/components/modules/CategoryList/CategoryList.module.css
+++ b/components/modules/CategoryList/CategoryList.module.css
@@ -25,7 +25,7 @@
   top: 0;
   left: 0;
   transform: rotate(-3deg) translate(0.2rem, 0.4rem);
-  background-color: #dc9458;
+  background-color: var(--stroke-title-color);
   opacity: 0.4;
   width: calc(100% + 1.25rem);
   height: calc(100% - 0.85rem);
