--- a/components/modules/Header/Header.module.css
+++ b/components/modules/Header/Header.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   display: flex;
   width: 100%;
-  height: 4.5rem;
+  height: var(--top-mobile-header-height);
   padding: 0 1.5rem;
   box-sizing: border-box;
   border-bottom: 1px solid var(--neutral-300);
@@ -24,6 +24,6 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .header {
-    min-height: 6rem;
+    min-height: var(--top-desktop-header-height);
   }
 }
