--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,13 +21,20 @@
 
   --error: #ad2216;
   --rating: #ffaa00;
+  --stroke-title-color: #dc9458;
+
+  --persistWhite: #fff;
+  --persistBlack: #121212;
 
   --transition-easeInOut: cubic-bezier(0.65, 0, 0.35, 1);
+
+  --top-mobile-header-height: 4.5rem;
+  --top-desktop-header-height: 6rem;
 }
 
 html[color-scheme='dark'] {
-  --primary: #dc9458;
-  --primary-hover: #e3a979;
+  --primary: #c5956d;
+  --primary-hover: #d0aa8a;
 
   --neutral-900: #fafafa;
   --neutral-800: #f5f5f5;
