--- a/components/modules/Navigation/DesktopNavigation/DesktopNavigation.module.css
+++ b/components/modules/Navigation/DesktopNavigation/DesktopNavigation.module.css
@@ -7,25 +7,23 @@
 /**************************/
 @media screen and (min-width: 1024px) {
   .nav {
-    display: block;
+    display: flex;
     flex: 1;
     user-select: none;
   }
-  .navListContainer {
+
+  .navLinkList {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 1rem 0 1rem 1rem;
-    width: 100%;
     box-sizing: border-box;
-  }
-  .navList {
-    display: flex;
     gap: 1rem;
-    align-items: center;
     color: var(--neutral-600);
+    width: 100%;
   }
-  .navList > li {
+  .navLinkList:last-child {
+    justify-content: end;
+  }
+  .navLinkList > li {
     position: relative;
     text-transform: capitalize;
   }
