--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -4,10 +4,8 @@
   position: relative;
   width: 100%;
   height: 18rem;
-  overflow: hidden;
   color: var(--neutral-600);
   border: 1px solid var(--neutral-300);
-  border-radius: 1rem;
   background-color: var(--neutral-50);
   transition: border 150ms ease-out;
 }
@@ -27,14 +25,14 @@
 }
 
 .badge {
-  width: 100%;
+  width: max-content;
   position: absolute;
-  top: 6%;
-  right: -37%;
-  transform: rotate(45deg);
+  top: 0;
+  left: 0;
+  padding: 0.2rem 0.5rem;
+  box-sizing: border-box;
   background-color: var(--primary);
   color: var(--neutral-50);
-  text-align: center;
   user-select: none;
 }
 
@@ -42,7 +40,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 1rem;
+  padding: 0.8rem;
 }
 .titleContainer {
   display: flex;
@@ -71,12 +69,6 @@
 /**************************/
 /****** MEDIA QUERIES *****/
 /**************************/
-@media screen and (min-width: 576px) {
-  .badge {
-    top: 6%;
-    right: -42%;
-  }
-}
 @media screen and (min-width: 1024px) {
   .price {
     font-size: 1.5rem;
