--- a/components/elements/CartCount/CartCount.module.css
+++ b/components/elements/CartCount/CartCount.module.css
@@ -26,7 +26,7 @@
   width: 1.4rem;
   font-size: 0.938rem;
   font-weight: 600;
-  color: var(--neutral-50);
+  color: var(--white);
   background-color: var(--primary);
   border-radius: 50%;
   user-select: none;
