--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -8,6 +8,8 @@
   border: 1px solid var(--neutral-300);
   background-color: var(--neutral-50);
   transition: border 150ms ease-out;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 .card:hover {
   border: 1px solid var(--primary);
@@ -32,7 +34,7 @@
   padding: 0.2rem 0.5rem;
   box-sizing: border-box;
   background-color: var(--primary);
-  color: var(--neutral-50);
+  color: var(--white);
   user-select: none;
 }
 
