--- a/components/elements/CartProduct/CartProduct.module.css
+++ b/components/elements/CartProduct/CartProduct.module.css
@@ -9,7 +9,7 @@
 }
 
 .imageContainer {
-  width: 0;
+  width: 8rem;
   height: 100%;
   user-select: none;
   flex-shrink: 0;
@@ -19,6 +19,13 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.cartProductContent {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .about {
@@ -33,8 +40,12 @@
 
 .title {
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5rem;
+  font-size: 1.125rem;
+  line-height: 1.125rem;
+}
+.about span {
+  font-size: 0.9rem;
+  line-height: 1.125rem;
 }
 
 .inStock {
@@ -44,28 +55,27 @@
   color: var(--error);
 }
 
-.quantity {
-  flex-grow: unset;
-  padding: 0.5rem;
-  box-sizing: border-box;
-}
-
-.pricesContainer {
+.priceAndQuantityContainer {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 0.5rem;
   padding: 0.5rem;
   box-sizing: border-box;
-  height: 100%;
+  line-height: 1.125rem;
 }
 
 .price {
   font-size: 1.25rem;
+  align-items: flex-end;
+}
+
+.quantity {
+  flex-grow: 0;
+  margin-left: auto;
 }
 
 .removeProductButton {
-  color: var(--remove);
+  color: var(--error);
 }
 .removeProductButton:hover {
   text-decoration: underline;
@@ -78,6 +88,19 @@
   .imageContainer {
     width: 8rem;
   }
+
+  .title {
+    font-size: 1.25rem;
+    line-height: 2rem;
+  }
+  .about span {
+    font-size: 1rem;
+    line-height: unset;
+  }
+
+  .priceAndQuantityContainer {
+    line-height: unset;
+  }
 }
 @media screen and (min-width: 768px) {
   .imageContainer {
@@ -89,6 +112,9 @@
     width: 20rem;
   }
   .title {
+    font-size: 1.5rem;
+  }
+  .price {
     font-size: 1.5rem;
   }
 }
