--- a/components/elements/buttons/BurgerMenuButton/BurgerMenuButton.module.css
+++ b/components/elements/buttons/BurgerMenuButton/BurgerMenuButton.module.css
@@ -5,7 +5,7 @@
   padding: 0;
   border: none;
   background-color: transparent;
-  color: var(--primary);
+  color: var(--neutral-600);
   font-size: 1.125rem;
 }
 
@@ -22,7 +22,7 @@
 .bar {
   width: 100%;
   height: 0.15rem;
-  background-color: var(--primary);
+  background-color: var(--neutral-600);
   display: block;
   border-radius: 6px;
   position: absolute;
@@ -32,10 +32,10 @@
     background-color 150ms var(--transition-easeInOut);
 }
 .button:hover .bar {
-  background-color: var(--primary-hover);
+  background-color: var(--primary);
 }
 .button:hover .menuTitle {
-  color: var(--primary-hover);
+  color: var(--primary);
 }
 
 /* No active bars */
