--- a/components/elements/buttons/Button/Button.module.css
+++ b/components/elements/buttons/Button/Button.module.css
@@ -6,24 +6,14 @@
   font-weight: 600;
   font-size: 1rem;
   text-transform: uppercase;
+  background-color: var(--primary);
+  color: var(--white);
   transition: background-color 150ms ease-out;
   position: relative;
 }
 
-.filled {
-  background-color: var(--primary);
-  color: var(--neutral-50);
-}
-.filled:hover {
+.button:hover {
   background-color: var(--primary-hover);
-}
-.border {
-  border: 2px solid var(--primary);
-  color: var(--primary);
-}
-.border:hover {
-  background-color: var(--primary);
-  color: var(--neutral-50);
 }
 
 .disable {
