--- a/pages/delivery/Delivery.module.css
+++ b/pages/delivery/Delivery.module.css
@@ -1,5 +1,5 @@
 .mainTitle {
-  color: var(--primary);
+  color: var(--neutral-900);
   font-weight: 700;
   font-size: 1.75rem;
   margin: 2rem 0;
@@ -32,7 +32,7 @@
   flex-grow: 1;
   font-weight: 600;
   font-size: 1.5rem;
-  color: var(--primary);
+  color: var(--neutral-600);
   text-transform: uppercase;
   user-select: none;
   margin: 3rem 0;
