--- a/pages/cart/Cart.module.css
+++ b/pages/cart/Cart.module.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   font-size: 1.125rem;
 }
 
@@ -34,4 +34,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.CartCheckout {
+  display: flex;
+  margin-top: 3rem;
+  border-top: 1px solid var(--neutral-300);
 }
