--- a/components/modules/Navigation/MobileNavigation/MobileNavigation.module.css
+++ b/components/modules/Navigation/MobileNavigation/MobileNavigation.module.css
@@ -36,7 +36,7 @@
 
 .mobileNavigation {
   min-width: 18rem;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 3.5rem 1.5rem;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
