--- a/components/elements/buttons/Button/Button.module.css
+++ b/components/elements/buttons/Button/Button.module.css
@@ -2,7 +2,7 @@
   display: inline-flex;
   align-items: center;
   padding: 0.8rem 1rem;
-  border-radius: 0.5rem;
+  border-radius: var(--app-radius);
   font-weight: 600;
   font-size: 1rem;
   text-transform: uppercase;
