--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -48,20 +48,24 @@
   flex-grow: 1;
   padding: 0.8rem;
 }
+
 .titleContainer {
   display: flex;
   gap: 0.5rem;
 }
+
 .title {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
 .priceContainer {
   display: flex;
   flex-grow: 1;
 }
+
 .price {
   margin-left: auto;
   align-self: center;
@@ -72,9 +76,36 @@
   max-width: max-content;
 }
 
+.outOfStock {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  border-radius: var(--app-radius);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  cursor: not-allowed;
+  user-select: none;
+}
+
+.outOfStockText {
+  color: var(--error);
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 /**************************/
 /****** MEDIA QUERIES *****/
 /**************************/
+@media screen and (min-width: 768px) {
+  .outOfStockText {
+    font-size: 1.75rem;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .price {
     font-size: 1.5rem;
