--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,8 @@
   --top-mobile-header-height: 4.5rem;
   --top-desktop-header-height: 6rem;
 
-  --app-padding: 1.5rem;
+  --app-mobile-padding: 1rem;
+  --app-desktop-padding: 1.5rem;
   --app-radius: 0.3rem;
 }
 
@@ -96,27 +97,17 @@ svg {
   background-color: var(--neutral-100);
   position: relative;
 }
-.notFound {
+.center {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.notFound h1 {
+.center h1 {
   transform: translateY(-100%);
   font-weight: 600;
   color: var(--error);
   text-align: center;
-}
-main {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  width: 100%;
-  max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-  box-sizing: border-box;
 }
 
 p {
@@ -129,14 +120,25 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+
 .sidePadding {
-  padding: 0 1.5rem;
+  padding: 0 var(--app-mobile-padding);
   box-sizing: border-box;
 }
+
 .capitalize::first-letter {
   text-transform: capitalize;
 }
 
 .disable-scroll {
   overflow-y: hidden;
+}
+
+/**************************/
+/****** MEDIA QUERIES *****/
+/**************************/
+@media screen and (min-width: 768px) {
+  .sidePadding {
+    padding: 0 var(--app-desktop-padding);
+  }
 }
