--- a/components/elements/CartProduct/CartProduct.module.css
+++ b/components/elements/CartProduct/CartProduct.module.css
@@ -53,7 +53,7 @@
   color: var(--valid);
 }
 .outOfStock {
-  color: var(--error);
+  color: var(--red);
 }
 
 .priceAndQuantityContainer {
@@ -74,7 +74,7 @@
 }
 
 .removeProductButton {
-  color: var(--error);
+  color: var(--red);
   font-size: 0.8rem;
 }
 .removeProductButton:hover {
