--- a/components/elements/ProductCard/ProductCard.module.css
+++ b/components/elements/ProductCard/ProductCard.module.css
@@ -86,13 +86,13 @@
   border-radius: var(--app-radius);
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.87);
   cursor: not-allowed;
   user-select: none;
 }
 
 .outOfStockText {
-  color: var(--error);
+  color: var(--red-light);
   font-size: 1.5rem;
   font-weight: 600;
 }
